--- a/package.json
+++ b/package.json
@@ -5,12 +5,16 @@
   "main": "server.js",
   "author": "Sergio Gaspar <sergiomgaspar.dev@gmail.com>",
   "dependencies": {
+    "angular": "^1.6.2",
+    "angular-chart.js": "^1.1.1",
+    "angular-chartist.js": "^4.3.1",
     "async": "~0.2.8",
+    "chartist": "^0.10.1",
     "express": "~3.2.4",
     "jquery": "^3.1.0",
     "socket.io": "^1.0"
   },
   "scripts": {
-    "start": "node app.js"
+    "start": "node appSrv.js"
   }
 }
